dbeaver/dbeaver#16219 Preserve DDL statement boundaries